# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.810 2008/12/22 00:10:59 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2008/12/22) Improved ticket escalation notification, moved to .dtl support
    (Kernel/Output/HTML/Standard/AgentTicketEscalation.dtl) and added ticket
    title as mouse on over note.
 - (2008/12/19) Added out of office feature for agent users.
 - (2008/12/15) Added new ticket attributes to CSV export of ticket in ticket
    search. New attributes are 'Closed', 'FirstLock' and 'FirstResponse'.
 - (2008/12/10) Added the text auto link feature ot add http links for text body
    to add icons after conigured expressions the standard.
 - (2008/12/08) Added feature to install included packages located under
    var/packages/*.opm on first/initial setup.
 - (2008/12/08) Added new postmaster filter to check if new arrived email is
    based on follow up of forwarded email. Then Followup should not be shown
    as "email-external", it should be shown as "email-internal".
 - (2008/11/12) Removed not supported PostMaster module
    Kernel/System/PostMaster/Filter/AgentInterface.pm.
 - (2008/11/10) Added autocomplete feature for customer search.
 - (2008/10/30) Fixed bug# 2371 - "Panic, no user data!" message should be more
    verbose.
 - (2008/10/29) Added additional default attributes of customer attributes like
    (phone, fax, mobile, street, zip, city). Use scripts/DBUpdate-to-2.4.*.sql
    for upgrading.
 - (2008/10/28) Fixed bug# 1722 - weekday sorting in TimeWorkingHours corrected.
 - (2008/10/28) Fixed bug# 1491 - text in the file "UPGRADING" is misleading.
 - (2008/10/28) Implemented RFE (bug# 1006): Added ticket change time to